crates/check_cli/tests/snapshots/main_commands_lint/lint_only_skip_group.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
