crates/check_cli/tests/snapshots/main_commands_lint/lint_only_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{}
```

## `check.js`

```js

    export const z = (array) => {
        array.map((sentence) => sentence.split(" ")).flat();
        return 0;
    };
    
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
