crates/check_cli/tests/snapshots/main_commands_lint/lint_skip_group_with_enabled_rule.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "error"
      }
    }
  }
}
```

## `check.js`

```js
debugger; delete obj.prop;
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
