crates/check_cli/tests/snapshots/main_commands_lint/lint_skip_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{}
```

## `check.js`

```js

    export const z = function (array) {
        array.flatMap((sentence) => sentence.split(" "));
        return 0;
    };
    
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
