crates/check_cli/tests/snapshots/main_commands_lint/lint_syntax_rules.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.js`

```js
class A { #foo; #foo }
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:11 lint/correctness/noUnusedPrivateClassMembers  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This private class member is defined but never used.
  
  > 1 │ class A { #foo; #foo }
      │           ^^^^
  
  i Unsafe fix: Remove unused declaration.
  
    1 │ class·A·{·#foo;·#foo·}
      │           ------      

```

```block
check.js:1:17 lint/correctness/noUnusedPrivateClassMembers  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This private class member is defined but never used.
  
  > 1 │ class A { #foo; #foo }
      │                 ^^^^
  
  i Unsafe fix: Remove unused declaration.
  
    1 │ class·A·{·#foo;·#foo·}
      │                 ----- 

```

```block
check.js:1:7 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This class A is unused.
  
  > 1 │ class A { #foo; #foo }
      │       ^
  
  i Unused variables are often the result of an incomplete refactoring, typos, or other sources of bugs.
  

```

```block
check.js:1:17 syntax/correctness/noDuplicatePrivateClassMembers ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Duplicate private class member "#foo"
  
  > 1 │ class A { #foo; #foo }
      │                 ^^^^
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 3 warnings.
```
